prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/inc_dec_not_assignable.diag.txt
ERROR: argument of inc/dec operation is not assignable
testData/diagnostics/compilation_errors/sema_errors/inc_dec_not_assignable.nut:2:0

// EXPECT_ERROR: "not assignable"
(1 + 2)++
^-----


